--- a/pages/page css/services.css
+++ b/pages/page css/services.css
@@ -4,7 +4,7 @@ html body {
   font-family:
     "Lucida Sans", "Lucida Sans Regular", "Lucida Grande",
     "Lucida Sans Unicode", Geneva, Verdana, sans-serif;
-  background: #ffffff;
+  background: #c5c5c5;
 }
 
 .top__banner {
