--- a/style.css
+++ b/style.css
@@ -77,29 +77,28 @@ header {
 .info__link {
   display: flex;
   align-items: center;
+  gap: 15px;
   border: solid black;
   border-radius: 5px;
   padding: 10px;
   background-color: white;
+  width: 175px;
 }
 
 .info__container-links {
   display: flex;
-  justify-content: space-evenly;
-  padding-left: 150px;
+  justify-content: center;
+  gap: 80px;
   flex-wrap: wrap;
   padding-top: 100px;
   padding-bottom: 100px;
-  width: 100pc;
+  max-width: 100%;
 }
 
 @media (max-width: 480px) {
   .info__container-links {
     display: flex;
-    flex-direction: column;
     justify-content: center;
-    padding-left: 120px;
-    width: 150px;
     padding-bottom: 50px;
     padding-top: 50px;
     gap: 20px;
